# RightEdit

RightEdit/: build.gradle  settings.gradle
RightEdit/RightEditCore/: build.gradle
RightEdit/RightEditCore/src/androidTest/java/com/right/edit/core/: ExampleInstrumentedTest.java
RightEdit/RightEditCore/src/main/: AndroidManifest.xml
RightEdit/RightEditCore/src/main/cpp/: CMakeLists.txt  config.h.in
RightEdit/RightEditCore/src/main/cpp/RightEdit/: RightConfig.h
RightEdit/RightEditCore/src/main/cpp/RightEdit/app/: RHApplication.cpp  RHApplication.h  RHExternalApi.cpp  RHExternalApi.h
RightEdit/RightEditCore/src/main/cpp/RightEdit/basesys/: RHImageConvertThread.cpp  RHImageConvertThread.h  RHImageEncoderThread.cpp  RHImageEncoderThread.h
RightEdit/RightEditCore/src/main/cpp/RightEdit/common/: RAppObject.cpp  RAppObject.h  RErrorCode.h  RHAppDef.h  RHCommonDefine.h  RHDataSwap.cpp  RHDataSwap.h  RHErrorCode.h  RHFrameQueue.cpp  RHFrameQueue.h  RHLock.cpp  RHLock.h  RHMediaDemux.cpp  RHMediaDemux.h  RHPNGEncoder.cpp  RHPNGEncoder.h  RHPacketQueue.cpp  RHPacketQueue.h  RHRefObject.cpp  RHRefObject.h  RHSafeDataSwap.cpp  RHSafeDataSwap.h  RHYUVConvert.cpp  RHYUVConvert.h
RightEdit/RightEditCore/src/main/cpp/RightEdit/core/libpng/: pngerror.c  pngpriv.h  pngrutil.c
RightEdit/RightEditCore/src/main/cpp/RightEdit/data/: RHFrameData.cpp  RHFrameData.h  RHThumbnailParam.h
RightEdit/RightEditCore/src/main/cpp/RightEdit/decode/: RHBaseDecoder.cpp  RHBaseDecoder.h
RightEdit/RightEditCore/src/main/cpp/RightEdit/gl/: RHFbo.cpp  RHFbo.h  RHGLTexture.cpp  RHGLTexture.h  RHGLUtil.cpp  RHGLUtil.h
RightEdit/RightEditCore/src/main/cpp/RightEdit/gl/shader/: I420rgba.h  RHGLProgram.cpp  RHGLProgram.h  RHRenderDef.h  RHShaderMgr.cpp  RHShaderMgr.h  normal2d.h  nv12rgba.h  nv21rgba.h
RightEdit/RightEditCore/src/main/cpp/RightEdit/mediacodec/: RHMediaCodec.cpp  RHMediaCodec.h
RightEdit/RightEditCore/src/main/cpp/RightEdit/platform/: EnvWrapper.cpp  EnvWrapper.h  JavaHelper.cpp  JavaHelper.h  NativeApi.cpp  NativeApi.h  jniHelper.cpp  jniHelper.h
RightEdit/RightEditCore/src/main/cpp/RightEdit/thumbnail/: RHThumbnailDef.h  RHThumbnailMgr.cpp  RHThumbnailMgr.h
RightEdit/RightEditCore/src/main/cpp/RightEdit/thumbnail/decode/: RHThumbnailDecode2.cpp  RHThumbnailDecode2.h
RightEdit/RightEditCore/src/main/cpp/RightEdit/utils/: utils.cpp  utils.h
RightEdit/RightEditCore/src/main/java/com/right/edit/core/: RHCoreEngine.java
RightEdit/RightEditCore/src/main/java/com/right/edit/core/controller/: RHEnginelController.java  RHThumbnailController.java
RightEdit/RightEditCore/src/main/res/values/: strings.xml
RightEdit/RightEditCore/src/main/res/values-night/: themes.xml
RightEdit/RightEditCore/src/test/java/com/right/edit/core/: ExampleUnitTest.java
RightEdit/app/: build.gradle
RightEdit/app/src/androidTest/java/com/right/edit/: ExampleInstrumentedTest.java
RightEdit/app/src/main/: AndroidManifest.xml
RightEdit/app/src/main/java/com/right/edit/: App.java
RightEdit/app/src/main/java/com/right/edit/control/: RHEditControl.java
RightEdit/app/src/main/java/com/right/edit/ui/: MainActivity.java  SplashActivity2.java
RightEdit/app/src/main/java/com/right/edit/utils/: PermissionUtil.java
RightEdit/app/src/main/res/layout/: main.xml  splash.xml
RightEdit/app/src/main/res/values/: strings.xml  themes.xml
RightEdit/app/src/test/java/com/right/edit/: ExampleUnitTest.java
RightEdit/gradle/wrapper/: gradle-wrapper.properties
(+4 files in other folders)
